# SpargeAttn

./: pyproject.toml  setup.py
spas_sage_attn/: core.py
